# personalPerformance

./: .gitignore  .golangci.yaml  Cargo.toml  Makefile  README.md  SECURITY.md  go.mod  go.sum  rstest-fmt.go  rust-toolchain.toml  sort-settings.go
.github/: dependabot.yml
.github/workflows/: codeql.yml  go-ci.yml  rust-ci.yml
99_homework/: main.go  main_test.go
appliedgo/t1/: main.go
appliedgo/t2/: main.go
cmd/rstest-fmt/: main.go
cmd/sort-settings/: main.go
codeJam18/STUA/: main.go  main_test.go  tst.txt
codeJam18/gg/: main.go  main22.go  tst.txt
codeJam18/tsort/: main.go
diff/aura/: main.go
diff/avo/: go.mod  main.go  readme.md
diff/calculator/: main.go  main_test.go
diff/coreteka/: main.go
diff/cors/: frontend.go  go.mod  go.sum
diff/long_sum/: main.go
diff/n-ix/: main.go
diff/openweb/: main.go
diff/taskA/: main.go
diff/test_validator/: go.mod  go.sum  main.go
diff/vagrant_with_k8s/: Vagrantfile
fbhackercup/: main.go
fbhackercup/2018/: main.go
fbhackercup/2019/: main.go
fbhackercup/2021/: letters.go
gotour/EquivalentBinaryTrees/: main.go
kickstart/smallerStrings/: main.go  main_test.go
leetcode/1.TwoSum/: main.go  main_test.go
leetcode/100SameTree/: main.go  main_test.go
leetcode/101SymmetricTree/: main.go
leetcode/102.BinaryTreeLevelOrderTraversal/: main.go  main_test.go
leetcode/104.MaximumDepthofBinaryTree/: main.go  main_test.go
leetcode/1051.HeightChecker/: main.go  main_test.go
leetcode/133.CloneGraph/: main.go  (+1 more)
pandas/: fruits.csv  rusttttttest.ipynb
racy/: racy.go
sqltst/: tst.sql  tst2.sql
(+446 files in other folders)
